--- a/app.css
+++ b/app.css
@@ -21,6 +21,12 @@ body {
 .square {
     min-height: 100px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 900;
+    font-size: 50px;
 }
 .square:hover {
     background-color: blue;
