--- a/app.css
+++ b/app.css
@@ -1,10 +1,21 @@
+* {
+    margin: 0;
+}
 body {
     height: 100vh;
     width: 100vw;
     background-color: aqua;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+}
+.title {
+    font-size: 40px;
+    font-family: 'Indie Flower', cursive;
+}
+#top {
+    font-size: 30px;
 }
 .main {
     width: 500px;
@@ -28,6 +39,41 @@ body {
     font-weight: 900;
     font-size: 50px;
 }
+.squaretwo {
+    min-height: 100px;
+    background-color: rgb(241, 229, 6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 900;
+    font-size: 50px;
+}
+@media only screen and (max-width: 600px) {
+    .main {
+        width: 400px;
+    }
+    .square {
+        min-height: 100px;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-weight: 900;
+        font-size: 50px;
+    }
+    .squaretwo {
+        min-height: 100px;
+        background-color: rgb(241, 229, 6);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-weight: 900;
+        font-size: 50px;
+    }
+  }
 .square:hover {
     background-color: blue;
 }
